cambio nombres pipeline

--- a/.github/workflows/terraformPolicy.yml
+++ b/.github/workflows/terraformPolicy.yml
@@ -8,7 +8,7 @@ on:
  
 jobs:
   terraform:
-    name: 'Terraform'
+    name: 'Azure Policies Deploy'
     env:
       ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
       ARM_CLIENT_SECRET: ${{ secrets.AZURE_AD_CLIENT_SECRET }}
