--- a/.github/workflows/terraformHubNetwork.yml
+++ b/.github/workflows/terraformHubNetwork.yml
@@ -8,7 +8,7 @@ on:
  
 jobs:
   terraform:
-    name: 'Terraform'
+    name: 'Hub Deploy'
     env:
       ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
       ARM_CLIENT_SECRET: ${{ secrets.AZURE_AD_CLIENT_SECRET }}
